worked on the resume part

--- a/index.html
+++ b/index.html
@@ -255,23 +255,25 @@
         </div>
     </div>
 
-    <!-- <div class="wew">
+     <div class="wew">
                 <div class="blog-post">
                     <div class="blog-post-img">
-                        <img src="hill.jpg">
+                        <img src="resume.png">
                     </div>
                     <div class="blog-post-info">
                         <div class="blog-post-date">
                             <span>Tuesday</span>
                             <span>10//10/10</span>
                         </div>
-                        <h1 class="blog-post-title">Blog post</h1>
+                        <h1 class="blog-post-title">Resume</h1>
+                        <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
+                        <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
                         <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
                         <a href="#" class="blog-post-btn">See more</a>
                     </div>
                 </div>
                 
-            </div>-->
+            </div>
     <!--            <div class="wew2">
                 <div class="blog-post">
                     <div class="blog-post-info2">
