fix the content bleed on portrait mode

--- a/index.html
+++ b/index.html
@@ -262,12 +262,28 @@
                     </div>
                     <div class="blog-post-info">
                         <div class="blog-post-date">
-                            <span>Tuesday</span>
-                            <span>10//10/10</span>
                         </div>
                         <h1 class="blog-post-title">Resume</h1>
-                        <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
-                        <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
+			<p class="blog-post-text"><p>
+                        Teaching Assistance Expert
+                        Excellent with Children
+                        Interpersonal Skills
+                        Teamwork & Individuals Capabilities
+                        Knowledge Retention
+                        Time Management Skills
+                        MS Office Suite
+                        Computer Troubleshooting
+			Modern Classroom Technology</p>
+
+                        <p class="blog-post-text">
+                    <h3><span>Awards and Certificates</span></h3>
+
+                    <span>Active Girls Scout of the Philippines
+                        Seminar in Lesson Planning
+                        TESDA NCII
+                        Computer Hardware & Software Servicing
+                        National Service Training Program
+                    </span>
                         <p class="blog-post-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iste adipisci neque nesciunt molestiae eos consectetur ipsa deserunt incidunt dicta, dignissimos omnis. Nulla aspernatur accusamus, perspiciatis nam optio et provident. </p>
                         <a href="#" class="blog-post-btn">See more</a>
                     </div>
